# pose3D

./: .gitignore  CMakeLists.txt  README.md  sampleGenerateCamFile.m
models/: 18.cam
src/: CMakeLists.txt  cameras.cpp  cameras.h  displaySkeleton.cpp  displaySkeleton.h  interface.cpp  interface.h  mocapPlayer.cpp  motion.cpp  motion.h  skeleton.cpp  skeleton.h  transform.h  types.h
